Fixed all responsiveness issues
Added fixes for the different sections that were not responsive.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -33,3 +33,9 @@ h4 {
 p {
   font-size: 1em;
 }
+
+@media screen and (max-width: 1000px) {
+  h1 {
+    /* font-size: 3.5em; */
+  }
+}
